5 files modified, 2 added, 1 deleted

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "nuxt build",
     "start": "node .output/server"
   },
-  "devDependencies": {
-    "nuxt3": "latest"
+  "dependencies": {
+    "nuxt": "^3.0.0-rc.11"
   }
 }
