--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": false,
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "types": [
-      "node"
-    ]
-  }
+  "extends": "../types/dev/tsconfig.json"
 }
